--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
 <link href="images/apple-touch-startup-image-320x460.png" media="(device-width: 320px)" rel="apple-touch-startup-image">
 <link href="images/apple-touch-startup-image-640x920.png" media="(device-width: 320px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image">
-<title>Crop Export</title>
+<title>Crop Expert</title>
 <link rel="stylesheet" href="css/framework7.css">
 <link rel="stylesheet" href="style.css">
 <link type="text/css" rel="stylesheet" href="css/swipebox.css" />
@@ -63,25 +63,7 @@
               <div class="homenavbar">
                 <a href="index.html"><img src="images/main.jpg" width="100%"></a>      
               </div>   
-              <div class="page_single layout_fullwidth_padding toolbarpage">   <br>            
-               <center><h3><font color="green"><b>KrishiVigyan Kendra, Gajapati</b></font></h3></center>
-<center><h5><b><font color="red">Development Team</font></b></h5>
-Er. Dwarika Mohan Das, Scientist(Agricultural Engineering), KVK Gajapati
-Dr.RashmitaToppo, Scientist (Horticulture), KVK Gajapati
-Mr.Sanjib Kumar Mandi, Scientist (Agronomy), KVK Gajapati, Manoj Kumar Sahoo (Programme Assistant(Computer))</center><br>
-<center><h5><b><font color="red">Publisher</font></b></h5>
-Dr. SangramParamaguru, Senior Scientist and Head, KVK Gajapati</center><br>
-<center><h5><b><font color="red">Mentors</font></b></h5>
-Dr.Prasanjeet Mishra, JDE, DEE, OUAT
-Dr.Pravat Kumar Raul, Directorate of Extension Education, OUAT, Bhubaneswar 
-Dr. S. S. Singh, Director ICAR-ATARI, Kolkata</center><br><br>
-<center><img src="images/ouat.jpg"></center><br>
-<center><b>Indian Council of Agricultural Research</b><br><br>
-<center><img src="images/icar.jpg"></center><br>
-<h5><font color="green"><b>Odisha University of Agriculture and Technology, Bhubaneswar</b></font></h5></center>
-
-
-<br><br>
+              <div class="page_single layout_fullwidth_padding toolbarpage">   <br> 
 
 
 <table style="width:100%">
@@ -90,11 +72,38 @@ Dr. S. S. Singh, Director ICAR-ATARI, Kolkata</center><br><br>
     <td><a href="major-crops.html"><img src="images/major-crops.png" width="95%"></a><br></td>
   </tr>
   </table>
+  <br>
+
+
+               <center><h4><font color="green"><b>Developed by  Krishi Vigyan Kendra, Gajapati</b></font></h4></center>
+
+ 
+
+<center><img src="images/ouat.jpg"></center><br>
+<font color="green"><b>Odisha University of Agriculture and Technology, Bhubaneswar</b></font></center><br><br>
+<center><img src="images/icar.jpg"></center>
+<center><font color="green"><b>Indian Council of Agricultural Research</b></font><br><br>
+<center><h5><b><font color="red">Development Team</font></b></h5>
+<p align="justify">
+Er. Dwarika Mohan Das, Scientist(Agricultural Engineering), KVK Gajapati<br>
+Dr.RashmitaToppo, Scientist (Horticulture), KVK Gajapati<br>
+Mr.Sanjib Kumar Mandi, Scientist (Agronomy), KVK Gajapati<br>
+Mr.Manoj Kumar Sahoo (Programme Assistant(Computer))</center><br></p>
+<center><h5><b><font color="red">Publisher</font></b></h5>
+<p align="justify">Dr. Sangram Paramaguru, Senior Scientist and Head, KVK Gajapati</center><br></p>
+<center><h5><b><font color="red">Mentors</font></b></h5>
+<p align="justify">Dr.Prasanjeet Mishra, JDE, DEE, OUAT<br>
+Dr.Pravat Kumar Raul, Directorate of Extension Education<br>
+OUAT,Bhubaneswar <br>
+Dr. S. S. Singh, Director ICAR-ATARI, Kolkata</center><br><br></p>
+
+
+
+
 
 <br><br>
 
-
-
+<br><br>
 
 
 
