--- a/mango.html
+++ b/mango.html
@@ -172,13 +172,15 @@ Irrigate the plant regularly at the initial stages at 5-7 days interval in case 
 <br>
 <h5><u>Plant Protection</u></h5>
 
-<p><img src="images/m1.png" align="left"> Anthracnose (leaves and fruits) : <br>Uproot the unwanted weeds, prune the disease affected plant parts and destroy them. Spray Carbendazim 0.1% or Chlorothalonil 0.2% at 14 days interval till harvesting.</p><br>
+<p><img src="images/m1.png" width="100%" align="left"><br> 
+Anthracnose (leaves and fruits) : <br>Uproot the unwanted weeds, prune the disease affected plant parts and destroy them. Spray Carbendazim 0.1% or Chlorothalonil 0.2% at 14 days interval till harvesting.</p><br>
 
-<p><img src="images/m2.png" align="left">Powdery mildew : <br>
+<p><img src="images/m2.png" width="100%" align="left"><br>
+Powdery mildew : <br>
 Spray Wettable Sulphur @ 2g/ l or Dinocarp @1ml/l or Carbendazim (0.1%) or Tridemorph ( 0.1%) or Karathane (0.1%) at 15 days interval. The first application may be soon after flowering. 
 </p><br>
 
-<p><img src="images/m3.png" align="left"> Mango malformation : <br>
+<p><img src="images/m3.png" width="100%" align="left"><br> Mango malformation : <br>
 • Diseased plants should be destroyed. <br>
 • Use of disease free planting material<br>
 • Incidence reduced by spraying 100-200ppm NAA during October.<br>
@@ -191,14 +193,14 @@ Spray Wettable Sulphur @ 2g/ l or Dinocarp @1ml/l or Carbendazim (0.1%) or Tride
 • Summer ploughing to expose the pupae<br>
 • Spray carbaryl 50WP 0.1%.</p>
 
-<p><img src="images/m4.png" align="left">Mango hoppers : <br>
+<p><img src="images/m4.png" width="100%" align="left"><br>Mango hoppers : <br>
 
  • void close planting, as the incidence very severe in overcrowded orchards.<br>
 • Orchards must be kept clean by ploughing and removal of weeds.<br>
 • Spray two rounds of acephate 75 SP@ 1g/lit or phosalone 35 EC@ 1.5 ml/li
 </p>
 
-<p><img src="images/m5.png" align="left">Fruit fly : <br>
+<p><img src="images/m5.png" width="100%" align="left"><br>Fruit fly : <br>
 
 • Collect fallen infested fruits and dispose them by dumping in a pit<br>
 • Provide summer ploughing to expose the pupa<br>
@@ -206,17 +208,16 @@ Spray Wettable Sulphur @ 2g/ l or Dinocarp @1ml/l or Carbendazim (0.1%) or Tride
 • Bait spray - combing any Dimethoate 30 EC 1 ml/l  and molasses or jaggery 10 g/l, two rounds at 2 weeks interval before ripening of fruits.
 </p>
 
-<p><img src="images/m6.png" align="left">Biological control : <br>
+<p><img src="images/m6.png" width="100%" align="left"><br>Biological control : <br>
 • Field release of natural enemies Opius compensates and Spalangia philippines
 </p>
 
-<p><img src="images/m7.png" align="left">Inflorescence Midge : <br>
+<p><img src="images/m7.png" width="100%" align="left"><br>Inflorescence Midge : <br>
 • Remove and destroy affected flowers and tender shoots<br>
 • Spray dimethoate 30 EC @ 0.06%, methyl demeton 25 EC @0.05%
 
 </p>
 
-<br><br><br>
 <table border="1" width="100%">
 <tbody>
 
