--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
 
 <table style="width:100%">
   <tr>
-    <td><a href="district-profile.html"><img src="images/district-profile.png" width="95%"></a><br></td>
-    <td><a href="major-crops.html"><img src="images/major-crops.png" width="95%"></a><br></td>
+    <a href="district-profile.html"><img src="images/district-profile.png" width="100%"></a><br><br>
+   <a href="major-crops.html"><img src="images/major-crops.png" width="100%"></a><br>
   </tr>
   </table>
   <br>
 
 
-               <center><h4><font color="green"><b>Developed by  Krishi Vigyan Kendra, Gajapati</b></font></h4></center>
+               <center><h4><font color="green"><b>Developed by<br>  Krishi Vigyan Kendra, Gajapati</b></font></h4></center>
 
  
 
 <center><img src="images/ouat.jpg"></center><br>
-<font color="green"><b>Odisha University of Agriculture and Technology, Bhubaneswar</b></font></center><br><br>
+<center><b><h3><font color="green">Odisha University of Agriculture and Technology, Bhubaneswar</h3></b></font></center><br><br>
 <center><img src="images/icar.jpg"></center>
 <center><font color="green"><b>Indian Council of Agricultural Research</b></font><br><br>
 <center><h5><b><font color="red">Development Team</font></b></h5>
@@ -88,12 +88,12 @@
 Er. Dwarika Mohan Das, Scientist(Agricultural Engineering), KVK Gajapati<br>
 Dr.RashmitaToppo, Scientist (Horticulture), KVK Gajapati<br>
 Mr.Sanjib Kumar Mandi, Scientist (Agronomy), KVK Gajapati<br>
-Mr.Manoj Kumar Sahoo (Programme Assistant(Computer))</center><br></p>
+Mr.Manoj Kumar Sahoo (Programme Assistant,Computer)</center><br></p>
 <center><h5><b><font color="red">Publisher</font></b></h5>
 <p align="justify">Dr. Sangram Paramaguru, Senior Scientist and Head, KVK Gajapati</center><br></p>
 <center><h5><b><font color="red">Mentors</font></b></h5>
-<p align="justify">Dr.Prasanjeet Mishra, JDE, DEE, OUAT<br>
-Dr.Pravat Kumar Raul, Directorate of Extension Education<br>
+<p align="justify">Dr.Prasanjit Mishra, JDE, DEE, OUAT<br>
+Dr.Pravat Kumar Raul, Dean Extension Education<br>
 OUAT,Bhubaneswar <br>
 Dr. S. S. Singh, Director ICAR-ATARI, Kolkata</center><br><br></p>
 
